@@ -10,7 +10,7 @@ public class RandomWords implements Supplier<String> {
     List<String> words = new ArrayList<>();
     Random rand = new Random(47);
     RandomWords(String fname) throws IOException {
-        List<String> lines = Files.readAllLines(Paths.get(fname));
+        List<String> lines = Files.readAllLines(Path.of(fname));
         // skip the first linn
         for (String line : lines.subList(1, lines.size())) {
             for (String word : line.split("[.?,]+")) {
@@ -25,5 +25,13 @@ public class RandomWords implements Supplier<String> {
     @Override
     public String toString() {
         return words.stream().collect(Collectors.joining(" "));
+    }
+
+    public static void main(String[] args) throws Exception {
+        System.out.println(
+                Stream.generate(new RandomWords("./src/com/zy/streams/Cheese.dat"))
+                        .limit(10)
+                        .collect(Collectors.joining(" "))
+        );
     }
 }
